# finance-stream

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  ruff.toml
Cassandra/: Dockerfile  pyproject.toml
Cassandra/src/: Cassandra.py
Consumer/src/: KafkaConsumer.py
Consumer/src/utils/: util.py
Dashboard/: Dockerfile  grafana.ini
Dashboard/provisioning/dashboards/: dashboard.json  dashboard.yml
Dashboard/provisioning/datasources/: cassandra.yml
Database/: init-db.cql
Processor/: Dockerfile  pyproject.toml
Processor/src/: SparkProcessor.py
Producer/: Dockerfile  main.py  pyproject.toml
Producer/src/: FinanceProducer.py
Producer/src/schema/: prices.avsc
Producer/src/utils/: kafka.py  util.py
